Add header section with contact details

--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name - CV/Resume</title>
+    <title>Andi Blindu - CV/Resume</title>
   </head>
 
-  <body></body>
+  <body>
+    <header>
+      <h1>Andi Blindu</h1>
+      <section id="contact">
+        <h2>Contact Details</h2>
+        <ul>
+          <li>Email: <a href="mailto:andi.blindu@student.utm.md">andi.blindu@student.utm.md</a></li>
+          <li>Phone: +373 69 XXX XXX</li>
+          <li>Location: Chișinău, Moldova</li>
+          <li>GitHub: <a href="https://github.com/blinduandi" target="_blank">github.com/blinduandi</a></li>
+        </ul>
+      </section>
+    </header>
+  </body>
 </html>
