Add about me section with personal description

--- a/index.html
+++ b/index.html
@@ -19,5 +19,16 @@
         </ul>
       </section>
     </header>
+
+    <main>
+      <section id="about">
+        <h2>About Me</h2>
+        <p>
+          I am a passionate software engineering student at Technical University of Moldova, with a strong interest in web development and building scalable systems.
+          I enjoy solving challenging problems and learning new technologies to create meaningful applications.
+          I aspire to become a skilled full-stack developer and contribute to innovative projects that make a difference.
+        </p>
+      </section>
+    </main>
   </body>
 </html>
