Add education section with favorite courses and memories

--- a/index.html
+++ b/index.html
@@ -29,6 +29,29 @@
           I aspire to become a skilled full-stack developer and contribute to innovative projects that make a difference.
         </p>
       </section>
+
+      <section id="education">
+        <h2>Education</h2>
+        
+        <article>
+          <h3>Technical University of Moldova</h3>
+          <p><strong>Faculty of Computers, Informatics and Microelectronics</strong></p>
+          <p><em>Bachelor's in Software Engineering | 2022 - 2026</em></p>
+          <p>
+            <strong>Favorite Course:</strong> Web Programming - I love how this course teaches both 
+            frontend and backend development, allowing me to build complete web applications from scratch.
+          </p>
+        </article>
+
+        <article>
+          <h3>High School</h3>
+          <p><em>2018 - 2022</em></p>
+          <p>
+            <strong>Pleasant Memory:</strong> Discovering my passion for programming during 
+            informatics classes and building my first simple website.
+          </p>
+        </article>
+      </section>
     </main>
   </body>
 </html>
