--- a/index.html
+++ b/index.html
@@ -52,6 +52,31 @@
           </p>
         </article>
       </section>
+
+      <section id="projects">
+        <h2>Projects</h2>
+
+        <article>
+          <h3>TUM Web Lab 1 - CV/Resume Website</h3>
+          <p>A personal CV/Resume website built with HTML following best practices and semantic markup.</p>
+          <p><strong>Technologies:</strong> HTML5</p>
+          <p><a href="https://github.com/blinduandi/tum-web-lab1" target="_blank">View on GitHub</a></p>
+        </article>
+
+        <article>
+          <h3>University Management System</h3>
+          <p>A web application for managing student records, courses, and grades.</p>
+          <p><strong>Technologies:</strong> Java, Spring Boot, PostgreSQL, HTML, CSS</p>
+          <p><a href="https://github.com/blinduandi/university-system" target="_blank">View on GitHub</a></p>
+        </article>
+
+        <article>
+          <h3>Weather Forecast App</h3>
+          <p>A responsive weather application that displays current conditions and 5-day forecasts.</p>
+          <p><strong>Technologies:</strong> JavaScript, REST API, HTML, CSS</p>
+          <p><a href="https://github.com/blinduandi/weather-app" target="_blank">View on GitHub</a></p>
+        </article>
+      </section>
     </main>
   </body>
 </html>
