--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
           <p><a href="https://github.com/blinduandi/weather-app" target="_blank">View on GitHub</a></p>
         </article>
       </section>
+
+      <section id="skills">
+        <h2>Technical Skills</h2>
+        <ul>
+          <li><strong>Programming Languages:</strong> Java, JavaScript, Python, C/C++</li>
+          <li><strong>Web Technologies:</strong> HTML5, CSS3, Spring Boot, Node.js</li>
+          <li><strong>Databases:</strong> PostgreSQL, MySQL, MongoDB</li>
+          <li><strong>Tools & Technologies:</strong> Git, Docker, VS Code, IntelliJ IDEA, Linux</li>
+          <li><strong>Frameworks:</strong> Spring Framework, React, Express.js</li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
