Add footer section

--- a/index.html
+++ b/index.html
@@ -89,5 +89,11 @@
         </ul>
       </section>
     </main>
+
+    <footer>
+      <hr />
+      <p>&copy; 2026 Andi Blindu. All rights reserved.</p>
+      <p>Last updated: February 2026</p>
+    </footer>
   </body>
 </html>
